--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,3 +6,7 @@ edition = "2021"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
+pretty_env_logger = "0.5"
+warp = "0.3.7"
+http = "1.1.0"
+tokio = { version = "1.0", features = ["macros", "rt-multi-thread"] }
